@@ -1,4 +1,0 @@
-debian/gitinternal.1
-debian/gitps.1
-debian/gitview.1
-debian/gitwipe.1
