@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH GITINTERNAL 1 "Feb 19, 2004"
+.TH GITINTERNAL 1 "Sep 30, 2007"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -18,7 +18,7 @@
 .SH NAME
 gitwhich, gitmkdirs, gitxgrep \- Helper programs for git
 .SH SYNOPSIS
-.B gitwhich 
+.B gitwhich
 .I file ...
 .br
 .B gitmkdirs
@@ -33,13 +33,8 @@ commands.
 These commands are internal to \fBgit\fP(1) and should generally not be run directly.
 .PP
 
-This manual page was written for the Debian distribution
-because the original program does not have a manual page.
-Instead, it has documentation in the GNU Info format; see below.
+
 .PP
-.\" TeX users may be more comfortable with the \fB<whatever>\fP and
-.\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
-.\" respectively.
 .TP
 .BI gitwhich " file ..."
 gitwitch returns with an exit status of 0 if any of its \fBfile\fP arguments
@@ -56,11 +51,15 @@ and \fBgitrfgrep\fP(1). Calls \fIgrepcmd\fP, passing \fIargs\fP to it.
 are part of \fBgit\fP(1), the GNU Interactive Tools.
 
 .SH SEE ALSO
-.BR git (1)
+.BR gitfm (1)
 .PP
-\fBgitview\fP and \fBgit\fP are documented fully by
+\fBThese tools are documented fully in
 .IR "GNU Interactive Tools" ,
 available via the Info system.
-.SH AUTHOR
-This manual page was written by Ian Beckwith <ianb@nessie.mcc.ac.uk>,
-for the Debian project (but may be used by others).
+.SH AUTHORS
+.I Tudor Hulubei <tudor@cs.unh.edu>
+.br
+.I Andrei Pitis <pink@pub.ro>
+.br
+.I Ian Beckwith <ianb@nessie.mcc.ac.uk> (current maintainer)
+
