@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH GITVIEW 1 "Feb 19, 2004"
+.TH GITVIEW 1 "Sep 30, 2007"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -25,14 +25,6 @@ gitview \- An ASCII/HEX file viewer
 This manual page documents briefly the
 .B gitview
 command.
-This manual page was written for the Debian distribution
-because the original program does not have a manual page.
-Instead, it has documentation in the GNU Info format; see below.
-.PP
-.\" TeX users may be more comfortable with the \fB<whatever>\fP and
-.\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
-.\" respectively.
-
 
 \fBgitview\fP is an ASCII/HEX file viewer.  Use the `arrows', `PageUp',
 `PageDown', `Home', `End', `^N', `^P', `^V', `ESC v', `Space' and
@@ -67,11 +59,14 @@ Don't use ANSI colours.
 .B \-l
 Don't use last screen character.
 .SH SEE ALSO
-.BR git (1)
+.BR gitfm (1)
 .PP
-\fBgitview\fP and \fBgit\fP are documented fully by
+\fBgitview\fP and \fBgitfm\fP are documented fully by
 .IR "GNU Interactive Tools" ,
 available via the Info system.
-.SH AUTHOR
-This manual page was written by Ian Beckwith <ianb@nessie.mcc.ac.uk>,
-for the Debian project (but may be used by others).
+.SH AUTHORS
+.I Tudor Hulubei <tudor@cs.unh.edu>
+.br
+.I Andrei Pitis <pink@pub.ro>
+.br
+.I Ian Beckwith <ianb@nessie.mcc.ac.uk> (current maintainer)
