@@ -2,6 +2,7 @@
 
 	* add --enable-debian flag to set defaults
 	for debian (sensible-browser, etc).
+	* merged debian manpages (gitps, gitview, gitwipe, etc) upstream.
 
 2007-09-29  Ian Beckwith  <ianb@nessie.mcc.ac.uk>
 
